// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`DSL 快照样例（两版 × 代表性进度态） quick · prototype 进行中 1`] = `
"---
config:
  flowchart:
    nodeSpacing: 28
    rankSpacing: 36
    padding: 6
---
flowchart TD
    USER(["用户描述想法"]) --> MODE{"模式路由"}
    MODE -->|"快消型 · AC light<br/>攻 deepseek-v4-flash / 防 glm-5-turbo"| REQ

    REQ["① 需求分析师 requirement-analyst · deepseek-v4-pro<br/>产出 PRD<br/>✓ 已完成"]

    REQ -->|"确认"| PROTO

    subgraph SG_PROTO["② UX 顾问 ux-advisor · MiniMax-M3"]
        direction TB
        PROTO["可交互 HTML 原型<br/>02_UX_DESIGN/prototype.html"]
        PROTO --> PROTO_SS{"截图渲染自检循环<br/>连续 2 轮无缺陷"}
        PROTO_SS -->|"发现缺陷 → 修复"| PROTO
        PROTO_SS -->|"通过"| PROTO_ATK["攻击者审查（AC light + 视觉/交互维度）"]
        PROTO_ATK --> PROTO_DEF["防御者裁决"]
        PROTO_DEF -->|"red → 修复后重新攻击"| PROTO_ATK
        PROTO_DEF -->|"无 red"| PROTO_UC{"用户确认<br/>预览 02_UX_DESIGN/prototype.html"}
        PROTO_DEF -->|"无 red"| PROTO_VIS{"独立视觉裁决<br/>防作者自证"}
        PROTO_VIS -->|"red → 回截图自检"| PROTO_SS
        PROTO_VIS -->|"green / yellow"| PROTO_UC{"原型确认 · 点选纠错<br/>意见收集轮 → 批量修改"}
        PROTO_UC -->|"补充意见"| PROTO
    end

    PROTO_UC -->|"全部用户故事通过"| CODE

    CODE["③ 全栈开发 fullstack-developer · deepseek-v4-pro<br/>可运行应用代码<br/>未开始"]

    CODE -->|"应用验证通过"| TEST

    TEST["④ 测试工程师 test-engineer · deepseek-v4-pro<br/>GWT 验收测试<br/>未开始"]

    TEST -->|"全场景通过 · 裁判判定"| DONE(["交付 delivered<br/>项目可用 · 验收通过"])

    classDef st-done fill:#A7F3D0,stroke:#059669,stroke-width:2px,color:#064E3B
    classDef st-sub-done fill:#D1FAE5,stroke:#059669,color:#065F46
    classDef st-current fill:#C7D2FE,stroke:#4F46E5,stroke-width:3px,color:#312E81
    classDef st-pending fill:#FFFFFF,stroke:#9CA3AF,color:#4B5563
    classDef st-blocked fill:#FEF3C7,stroke:#D97706,stroke-width:2px,color:#92400E
    class DONE st-pending
    class USER,MODE st-pending
    class REQ st-done
    class PROTO st-current
    class CODE st-pending
    class TEST st-pending
    linkStyle 2 stroke:#059669,stroke-width:2.5px
"
`;

exports[`DSL 快照样例（两版 × 代表性进度态） iterative · architecture 进行中 + Todo 徽标 1`] = `
"---
config:
  flowchart:
    nodeSpacing: 28
    rankSpacing: 36
    padding: 6
---
flowchart TD
    USER(["用户描述想法"]) --> MODE{"模式路由"}
    MODE -->|"长期迭代型 · AC medium<br/>攻 deepseek-v4-pro / 防 GLM-5.3"| REQ

    REQ["① 需求分析师 requirement-analyst · deepseek-v4-pro<br/>产出 PRD<br/>✓ 已完成"]

    REQ -->|"确认"| PROTO

    PROTO["② UX 顾问 ux-advisor · MiniMax-M3<br/>可交互 HTML 原型<br/>✓ 已完成"]

    PROTO -->|"全部用户故事通过"| ARCH

    subgraph SG_ARCH["③ 架构师 architect · deepseek-v4-pro"]
        direction TB
        ARCH["产出架构文档<br/>03_ARCHITECTURE/architecture.md<br/>Todo 1/3"]
        ARCH --> ARCH_ATK["攻击者审查（AC medium）"]
        ARCH_ATK --> ARCH_DEF["防御者裁决"]
        ARCH_DEF -->|"red → 修复后重新攻击"| ARCH_ATK
        ARCH_DEF -->|"有 red · AC 结论硬门禁"| ARCH_GATE{"AC 结论硬门禁<br/>red 时通知用户后重审"}
        ARCH_GATE -->|"处理后重新攻击"| ARCH_ATK
        ARCH_DEF -->|"无 red"| ARCH_UC{"用户确认<br/>预览 03_ARCHITECTURE/architecture.md"}
        ARCH_UC -->|"补充意见"| ARCH
    end

    ARCH_UC -->|"确认"| PLAN

    PLAN["④ 工程经理 engineering-manager · deepseek-v4-pro<br/>产出工程计划<br/>未开始"]

    PLAN -->|"确认"| CODE

    CODE["⑤ 全栈开发 fullstack-developer · deepseek-v4-pro<br/>可运行应用代码<br/>未开始"]

    CODE -->|"应用验证通过"| TEST

    TEST["⑥ 测试工程师 test-engineer · deepseek-v4-pro<br/>GWT 验收测试<br/>未开始"]

    TEST -->|"全场景通过 · 裁判判定"| DONE(["交付 delivered<br/>项目可用 · 验收交付完成"])

    classDef st-done fill:#A7F3D0,stroke:#059669,stroke-width:2px,color:#064E3B
    classDef st-sub-done fill:#D1FAE5,stroke:#059669,color:#065F46
    classDef st-current fill:#C7D2FE,stroke:#4F46E5,stroke-width:3px,color:#312E81
    classDef st-pending fill:#FFFFFF,stroke:#9CA3AF,color:#4B5563
    classDef st-blocked fill:#FEF3C7,stroke:#D97706,stroke-width:2px,color:#92400E
    class DONE st-pending
    class USER,MODE st-pending
    class REQ st-done
    class PROTO st-done
    class ARCH st-current
    class PLAN st-pending
    class CODE st-pending
    class TEST st-pending
    linkStyle 2,3 stroke:#059669,stroke-width:2.5px
"
`;

exports[`DSL 快照样例（W2 S3 展开/折叠） iterative · architecture 进行中 · 默认折叠（仅 ARCH 展开） 1`] = `
"---
config:
  flowchart:
    nodeSpacing: 28
    rankSpacing: 36
    padding: 6
---
flowchart TD
    USER(["用户描述想法"]) --> MODE{"模式路由"}
    MODE -->|"长期迭代型 · AC medium<br/>攻 deepseek-v4-pro / 防 GLM-5.3"| REQ

    REQ["① 需求分析师 requirement-analyst · deepseek-v4-pro<br/>产出 PRD<br/>✓ 已完成"]

    REQ -->|"确认"| PROTO

    PROTO["② UX 顾问 ux-advisor · MiniMax-M3<br/>可交互 HTML 原型<br/>✓ 已完成"]

    PROTO -->|"全部用户故事通过"| ARCH

    subgraph SG_ARCH["③ 架构师 architect · deepseek-v4-pro"]
        direction TB
        ARCH["产出架构文档<br/>03_ARCHITECTURE/architecture.md<br/>Todo 1/3"]
        ARCH --> ARCH_ATK["攻击者审查（AC medium）"]
        ARCH_ATK --> ARCH_DEF["防御者裁决"]
        ARCH_DEF -->|"red → 修复后重新攻击"| ARCH_ATK
        ARCH_DEF -->|"有 red · AC 结论硬门禁"| ARCH_GATE{"AC 结论硬门禁<br/>red 时通知用户后重审"}
        ARCH_GATE -->|"处理后重新攻击"| ARCH_ATK
        ARCH_DEF -->|"无 red"| ARCH_UC{"用户确认<br/>预览 03_ARCHITECTURE/architecture.md"}
        ARCH_UC -->|"补充意见"| ARCH
    end

    ARCH_UC -->|"确认"| PLAN

    PLAN["④ 工程经理 engineering-manager · deepseek-v4-pro<br/>产出工程计划<br/>未开始"]

    PLAN -->|"确认"| CODE

    CODE["⑤ 全栈开发 fullstack-developer · deepseek-v4-pro<br/>可运行应用代码<br/>未开始"]

    CODE -->|"应用验证通过"| TEST

    TEST["⑥ 测试工程师 test-engineer · deepseek-v4-pro<br/>GWT 验收测试<br/>未开始"]

    TEST -->|"全场景通过 · 裁判判定"| DONE(["交付 delivered<br/>项目可用 · 验收交付完成"])

    classDef st-done fill:#A7F3D0,stroke:#059669,stroke-width:2px,color:#064E3B
    classDef st-sub-done fill:#D1FAE5,stroke:#059669,color:#065F46
    classDef st-current fill:#C7D2FE,stroke:#4F46E5,stroke-width:3px,color:#312E81
    classDef st-pending fill:#FFFFFF,stroke:#9CA3AF,color:#4B5563
    classDef st-blocked fill:#FEF3C7,stroke:#D97706,stroke-width:2px,color:#92400E
    class DONE st-pending
    class USER,MODE st-pending
    class REQ st-done
    class PROTO st-done
    class ARCH st-done
    class ARCH_UC st-current
    class ARCH_ATK,ARCH_DEF,ARCH_GATE st-pending
    class PLAN st-pending
    class CODE st-pending
    class TEST st-pending
    linkStyle 2,3 stroke:#059669,stroke-width:2.5px
"
`;

exports[`DSL 快照样例（W2 S3 展开/折叠） iterative · 全展开（显式 expandedPhases）· subStage=ARCH_UC 细分着色 1`] = `
"---
config:
  flowchart:
    nodeSpacing: 28
    rankSpacing: 36
    padding: 6
---
flowchart TD
    USER(["用户描述想法"]) --> MODE{"模式路由"}
    MODE -->|"长期迭代型 · AC medium<br/>攻 deepseek-v4-pro / 防 GLM-5.3"| REQ

    subgraph SG_REQ["① 需求分析师 requirement-analyst · deepseek-v4-pro"]
        direction TB
        REQ["产出 PRD<br/>01_PRD/prd.md"]
        REQ --> REQ_ATK["攻击者审查（AC medium）"]
        REQ_ATK --> REQ_DEF["防御者裁决"]
        REQ_DEF -->|"red → 修复后重新攻击"| REQ_ATK
        REQ_DEF -->|"无 red"| REQ_UC{"用户确认<br/>预览 01_PRD/prd.md"}
        REQ_UC -->|"补充意见"| REQ
    end

    REQ_UC -->|"确认"| PROTO

    subgraph SG_PROTO["② UX 顾问 ux-advisor · MiniMax-M3"]
        direction TB
        PROTO["可交互 HTML 原型<br/>02_UX_DESIGN/prototype.html"]
        PROTO --> PROTO_SS{"截图渲染自检循环<br/>连续 2 轮无缺陷"}
        PROTO_SS -->|"发现缺陷 → 修复"| PROTO
        PROTO_SS -->|"通过"| PROTO_ATK["攻击者审查（AC medium + 视觉/交互维度）"]
        PROTO_ATK --> PROTO_DEF["防御者裁决"]
        PROTO_DEF -->|"red → 修复后重新攻击"| PROTO_ATK
        PROTO_DEF -->|"无 red"| PROTO_UC{"用户确认<br/>预览 02_UX_DESIGN/prototype.html"}
        PROTO_DEF -->|"无 red"| PROTO_VIS{"独立视觉裁决<br/>防作者自证"}
        PROTO_VIS -->|"red → 回截图自检"| PROTO_SS
        PROTO_VIS -->|"green / yellow"| PROTO_UC{"原型确认 · 点选纠错<br/>意见收集轮 → 批量修改"}
        PROTO_UC -->|"补充意见"| PROTO
    end

    PROTO_UC -->|"全部用户故事通过"| ARCH

    subgraph SG_ARCH["③ 架构师 architect · deepseek-v4-pro"]
        direction TB
        ARCH["产出架构文档<br/>03_ARCHITECTURE/architecture.md<br/>Todo 1/3"]
        ARCH --> ARCH_ATK["攻击者审查（AC medium）"]
        ARCH_ATK --> ARCH_DEF["防御者裁决"]
        ARCH_DEF -->|"red → 修复后重新攻击"| ARCH_ATK
        ARCH_DEF -->|"有 red · AC 结论硬门禁"| ARCH_GATE{"AC 结论硬门禁<br/>red 时通知用户后重审"}
        ARCH_GATE -->|"处理后重新攻击"| ARCH_ATK
        ARCH_DEF -->|"无 red"| ARCH_UC{"用户确认<br/>预览 03_ARCHITECTURE/architecture.md"}
        ARCH_UC -->|"补充意见"| ARCH
    end

    ARCH_UC -->|"确认"| PLAN

    subgraph SG_PLAN["④ 工程经理 engineering-manager · deepseek-v4-pro"]
        direction TB
        PLAN["产出工程计划<br/>05_PROJECT_PLAN/plan.md"]
        PLAN --> PLAN_ATK["攻击者审查（AC medium）"]
        PLAN_ATK --> PLAN_DEF["防御者裁决"]
        PLAN_DEF -->|"red → 修复后重新攻击"| PLAN_ATK
        PLAN_DEF -->|"无 red"| PLAN_UC{"用户确认<br/>预览 05_PROJECT_PLAN/plan.md"}
        PLAN_UC -->|"补充意见"| PLAN
    end

    PLAN_UC -->|"确认"| CODE

    subgraph SG_CODE["⑤ 全栈开发 fullstack-developer · deepseek-v4-pro"]
        direction TB
        CODE["可运行应用代码<br/>08_APP/index.html"]
        CODE --> CODE_ATK["攻击者审查（AC medium）"]
        CODE_ATK --> CODE_DEF["防御者裁决"]
        CODE_DEF -->|"red → 修复后重新攻击"| CODE_ATK
        CODE_DEF -->|"无 red"| CODE_UC{"用户确认<br/>预览 08_APP/index.html"}
        CODE_UC -->|"补充意见"| CODE
    end

    CODE_UC -->|"应用验证通过"| TEST

    subgraph SG_TEST["⑥ 测试工程师 test-engineer · deepseek-v4-pro"]
        direction TB
        TEST["GWT 验收测试<br/>06_TESTS/features/index.feature"]
        TEST --> TEST_ATK["攻击者审查（AC medium）"]
        TEST_ATK --> TEST_DEF["防御者裁决"]
        TEST_DEF -->|"red → 修复后重新攻击"| TEST_ATK
        TEST_DEF -->|"无 red"| TEST_GWT{"Harness 执行 GWT<br/>场景×步骤 · data-ai-id 锚点"}
        TEST_GWT -->|"❌ 失败场景 → 回炉 coding（≤2 次）"| TEST
        TEST_GWT -->|"全场景通过"| TEST_JUDGE{"规则裁判 judge.verdict<br/>全通过 + US 全覆盖 = 交付"}
    end

    TEST_JUDGE -->|"全场景通过 · 裁判判定"| DONE(["交付 delivered<br/>项目可用 · 验收交付完成"])

    classDef st-done fill:#A7F3D0,stroke:#059669,stroke-width:2px,color:#064E3B
    classDef st-sub-done fill:#D1FAE5,stroke:#059669,color:#065F46
    classDef st-current fill:#C7D2FE,stroke:#4F46E5,stroke-width:3px,color:#312E81
    classDef st-pending fill:#FFFFFF,stroke:#9CA3AF,color:#4B5563
    classDef st-blocked fill:#FEF3C7,stroke:#D97706,stroke-width:2px,color:#92400E
    class DONE st-pending
    class USER,MODE st-pending
    class REQ st-done
    class PROTO st-done
    class ARCH st-done
    class ARCH_UC st-current
    class ARCH_ATK,ARCH_DEF,ARCH_GATE st-pending
    class PLAN st-pending
    class PLAN_ATK,PLAN_DEF,PLAN_UC st-pending
    class CODE st-pending
    class CODE_ATK,CODE_DEF,CODE_UC st-pending
    class TEST st-pending
    class TEST_ATK,TEST_DEF,TEST_GWT,TEST_JUDGE st-pending
    class REQ_ATK,REQ_DEF,REQ_UC st-sub-done
    class PROTO_SS,PROTO_VIS,PROTO_ATK,PROTO_DEF,PROTO_UC st-sub-done
    linkStyle 7,18 stroke:#059669,stroke-width:2.5px
"
`;
